fixd add mark alignment

--- a/app/assets/stylesheets/courses.css.scss
+++ b/app/assets/stylesheets/courses.css.scss
@@ -103,6 +103,14 @@
 #delete-comp{
 	display: inline-block;
 }
+#comp-title{
+}
+#add-mark-btn{
+  list-style-type: none;
+  text-align: left;
+  padding:0px;
+  padding-top: 8px
+}
 
 /*//-- EXPANDABLE PANELS -- //*/
 .clickable
